        fixed type() and priority() base filter methods to actually work
        replaced test.doc with non-fast-saved version and removed comment in test
        fixed skip_filters routine in Filter.pm to use hash ref instead of hash
        added .ppt test file

0.06	worked final (we hope) kinks out of make test, esp where Filters already installed

0.07	added metadata() feature to Document class and updated Filters where applicable
	added 'title' as default title_tag in Pdf2HTML
        RT fix 20887
        added SWISH::Filters::Decompress and associated t/*gz files

0.08    changed metadata() to meta_data() and added ability to set it in convert()
        thorough audit of all Filters to improve syntax and formatting
        removed dependency on HTML::Entities (and thus HTML::Parser) by moving
           escapeXML() into SWISH::Filters::Base
        moved format_meta_headers() into SWISH::Filters::Base
        added test.mp3 to test files
        fixed SWISH::Filters::Decompress to correctly set MIME types using SWISH::Filter
           instead of File::Type
        added parent_filter() method to SWISH::Filters::Base
        added base filter() method to SWISH::Filters::Base which will croak if not overridden
        actually added SWISH::Filters::Decompress so it gets packaged... doh!

0.09    fixed SWISH::Filter to actually set meta_data correctly, and SWISH::Filters::Decompress to pass it through

0.10    cache can_filter() to avoid regexp check against all filters each time
        add missing deps to Makefile.PL


0.11    add MIME::Types as req and supplement built-in mime typer with more types

0.12    28 Sep 2009
        * avoid Subroutine redefined warnings in Base by checking if class 
          can() run_$program before creating a closure.

0.13    19 Nov 2009
        * fix path separator in tests to allow for Windows 

0.14    xxx
        * fix some memory leaks
        * add 'application/xml' as alternate to text/xml MIME
