@@ -1,7 +1,7 @@
 package SWISH::Filters::Base;
 use strict;
 use Carp;
-
+use Data::Dump qw( dump );
 use vars qw( $VERSION );
 
 $VERSION = '0.14';
@@ -34,13 +34,12 @@ sub filter {
 
 =head2 parent_filter
 
-Returns the SWISH::Filter object used to invoke your filter. Useful if you need to get
-a subsequent MIME type, for example. See SWISH::Filters::Decompress for an example.
+This method is no longer supported.
 
 =cut
 
 sub parent_filter {
-    return $_[0]->{parent_filter};
+    croak "parent_filter is no longer supported";
 }
 
 =head2 type
