@@ -4,7 +4,8 @@ use warnings;
 use Carp;
 use vars qw( $VERSION @ISA );
 $VERSION = '0.14';
-@ISA = ('SWISH::Filters::Base');
+@ISA     = ('SWISH::Filters::Base');
+use SWISH::Filter::MIMETypes;
 
 my %mimes = (
     'application/x-gzip' => 'gz',
@@ -22,6 +23,8 @@ sub new {
     my $ok;
 
     $self->{type} = 1;
+
+    $self->{_mimetypes} = SWISH::Filter::MIMETypes->new;
 
     # set mimetypes etc. based on which modules/programs we have
     # preference is to use Perl lib over binary cmd
@@ -66,7 +69,7 @@ sub get_type {
     my ( $self, $doc ) = @_;
     ( my $name = $doc->name ) =~ s/\.(gz|zip)$//i;
     $self->mywarn(" decompress: getting mime for $name");
-    return $self->parent_filter->decode_content_type($name);
+    return $self->{_mimetypes}->get_mime_type($name);
 }
 
 sub decompress {
